# light-splade

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build-doc.yaml  doc.yaml  light-splade-pre-commit.yml  light-splade-unit-test.yml  pre-commit.yml  unit-test.yml
config/: cross_encoder_predict.yaml  cross_encoder_train.yaml  splade_mmarco_ja_distil.yaml  splade_mmarco_ja_triplet.yaml  toy_splade_ja.yaml
config/data/: splade_data_mmarco_ja_distill.yaml  splade_data_mmarco_ja_triplet.yaml  toy_triplet_data.yaml
config/model/: splade_model_bert_ja_shared_weight.yaml
config/training/: splade_training_distill.yaml  splade_training_triplet.yaml  toy_triplet.yaml
data/toy_triplet/train/: doc_master.ndjson  positive_lists.ndjson  query_master.ndjson  triplets.ndjson
data/toy_triplet/validation/: doc_master.ndjson  positive_lists.ndjson  query_master.ndjson  triplets.ndjson
docs/: getting_started.md  index.md  splade_triplet_data_format.md  splade_triplet_distil_data_format.md  trouble_shooting.md
examples/: run_convert_mmarco_ja_distil.py  run_convert_mmarco_ja_triplet.py  run_predict_cross_encoder.py  run_train_cross_encoder.py  run_train_splade_distil.py  run_train_splade_triplet.py  train_splade_distil_pipeline.sh  train_splade_triplet_pipeline.sh
getting_started/: index.html
splade_triplet_data_format/: index.html
splade_triplet_distil_data_format/: index.html
src/light_splade/: __init__.py
src/light_splade/data/: __init__.py  base.py  master.py  ndjson_loader.py  pair_score.py  positive_list.py  triplet_datacollator.py  triplet_dataset.py  triplet_distil_datacollator.py  triplet_distil_dataset.py  triplet_list.py
src/light_splade/evaluator/: __init__.py  evaluator.py  metrics_evaluator.py  sparse_indexer.py  sparse_retriever.py
src/light_splade/losses/: __init__.py  distil_kl_div.py  distil_margin_mse.py  in_batch_negatives.py  pairwise_contrastive.py
src/light_splade/models/: __init__.py  splade.py
src/light_splade/regularizer/: __init__.py  base.py  flops.py  l1.py  regularizer_scheduler.py
src/light_splade/schemas/: __init__.py  types.py
src/light_splade/schemas/config/: __init__.py  base.py  config.py  (+6 more)
src/light_splade/trainer/: __init__.py  splade_trainer.py  splade_triplet_trainer.py
src/light_splade/utils/: __init__.py  argument.py  io.py  model.py  random.py  scoring.py
src/tests/data/: vocab1.txt  vocab2.txt
trouble_shooting/: index.html
(+41 files in other folders)
